# ai_org_prototype

./: .env.example  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .releaserc  App.jsx  CI_TODO.md  Makefile  alembic.ini  bandit.yaml  commitlint.config.cjs  init-repo.sh  llm.py  models.py  mypy.ini  orchestrator.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  readme.md  requirements.txt  tsconfig.json
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/ai_org_backend/: Dockerfile  alembic.ini  celeryconfig.py  config.py  db.py  env.py  main.py  metrics.py  repo.py  requirements.txt  settings.py
backend/ai_org_backend/agents/: __init__.py  agent_dev.py  agent_qa.py  agent_ux_ui.py  architect.py  planner.py  repo_composer.py
backend/ai_org_backend/alembic/: env.py
backend/ai_org_backend/api/: agents.py  auth.py  dependencies.py  pipeline.py  root.py  settings.py  templates.py
backend/ai_org_backend/legacy/: llm.py  templating.py
backend/ai_org_backend/models/: __init__.py  artifact.py  purpose.py  task.py  task_dependency.py  tenant.py
backend/ai_org_backend/orchestrator/: graph_orchestrator.py  inspector.py  orchestrator_legacy.py  router.py  scheduler.py
backend/ai_org_backend/services/: billing.py  budget.py  deep_research.py  embeddings.py  graph_sync.py  (+8 more)
backend/tests/: locustfile.py  test_app.py  test_auth.py  test_embeddings_cleanup.py  test_eval.py  test_llm_budget.py  test_planner_parsing.py  test_smoke.py  test_storage_overwrite.py  test_vector_store.py  test_vector_store_cleanup.py
(+68 files in other folders)
